# CPP-VOIP_Client_Server

./: CMakeLists.txt  Makefile  README.md  conanfile.py  conanfile.txt  test.cpp
.github/workflows/: build.yml
BabelClient/: CMakeLists.txt  main.cpp  test.cpp
BabelClient/Babel_qt/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui
BabelClient/ClientCore/: Application.hpp  ClientCore.cpp  ClientCore.hpp  ClientCoreError.hpp  IAudio.hpp  ICodec.hpp  IGraphics.hpp  ISocket.hpp  ITcpSocket.hpp  IUdpSocket.hpp  NetworkClientSocket.hpp  Opus.cpp  Opus.hpp  PortAudio.cpp  PortAudio.hpp  QUdpSocket.cpp  QUdpSocket.hpp  QtSocket.cpp  QtSocket.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
BabelClient/PortAudio/: Exception.hpp  test.cpp
BabelClient/QtGraphics/: QtSocket.cpp  QtSocket.hpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui
BabelClient/SaveQT/: Core.hpp
BabelClient/include/: Core.hpp  Exception.hpp
BabelClient/qtFront/: CallWidget.cpp  CallWidget.hpp  callwidget.ui
BabelClient/src/: test.cpp
BabelCommon/: Debug.hpp
BabelCommon/Database/: Models.hpp
BabelCommon/Debug/: Debug.hpp
BabelCommon/Errors/: BabelError.hpp  ClientError.hpp  NetworkError.hpp  ResponseError.hpp
BabelCommon/Logger/: Logger.cpp  Logger.hpp  LoggerError.cpp  LoggerError.hpp
BabelCommon/Network/NetworkInfos/: NetworkInfos.cpp  NetworkInfos.hpp
BabelCommon/Network/Protocol/AResponse/: AResponse.cpp  AResponse.hpp
BabelCommon/Network/Protocol/CallResponse/: CallResponse.cpp  CallResponse.hpp  FormattedCallResponse.cpp
BabelCommon/Network/Protocol/Connection/: ConnectionResponse.cpp  ConnectionResponse.hpp
BabelCommon/Network/Protocol/FriendResponse/: FormattedFriendResponse.cpp  FriendResponse.cpp  FriendResponse.hpp
BabelCommon/Network/Protocol/MessageResponse/: FormattedMessageResponse.cpp  MessageResponse.cpp  MessageResponse.hpp
BabelCommon/Network/Protocol/UserResponse/: FormattedUserResponse.cpp  UserResponse.cpp  UserResponse.hpp
BabelCommon/Network/Sockets/ASocket/: ASocket.cpp  ASocket.hpp
BabelCommon/Network/Sockets/AsioClientSocket/: AsioClientSocket.cpp  AsioClientSocket.hpp
BabelCommon/Network/Sockets/AsioSocket/: AsioClientSocket.cpp  AsioClientSocket.hpp  AsioSocket.cpp  AsioSocket.hpp  AsioSocket.tpp
BabelCommon/Network/Sockets/ClientSocket/: ClientSocket.cpp  ClientSocket.hpp
BabelCommon/Network/Sockets/ISocket/: ISocket.cpp  ISocket.hpp
BabelCommon/Network/Sockets/TcpSocket/: TcpSocket.cpp  TcpSocket.hpp
BabelCommon/Protocol/AResponse/: AResponse.cpp  AResponse.hpp  IResponse.hpp
BabelCommon/Protocol/Connection/: ConnectionResponse.cpp  ConnectionResponse.hpp
BabelCommon/Protocol/IResponse/: IResponse.cpp  IResponse.hpp
BabelCommon/StringFormat/: StringFormat.tpp
BabelCommon/Thread/: AThread.hpp  BoostThread.hpp
BabelCommon/Thread/AThread/: AThread.cpp  AThread.hpp
BabelCommon/Thread/BoostThread/: BoostThread.cpp  BoostThread.hpp
BabelCommon/Thread/IThread/: IThread.cpp  IThread.hpp
BabelCommon/Utils/: Debug.hpp  IRunnable.hpp  SharedPtr.hpp
BabelCommon/Utils/Logger/: Logger.cpp  Logger.hpp  LoggerError.hpp
BabelCommon/Utils/Runnable/: ARunnable.hpp  IRunnable.hpp
BabelCommon/Utils/Thread/: AThread.hpp  BoostThread.hpp
BabelServer/: CMakeLists.txt.old  TODO.md  main.cpp  test.cpp
BabelServer/AsioListener/: AsioListener.cpp  AsioListener.hpp
BabelServer/AsioListenerSocket/: AsioListenerSocket.cpp  AsioListenerSocket.hpp
BabelServer/AsioSocket/: AsioClientSocket.cpp  AsioClientSocket.hpp
BabelServer/Client/: Client.tpp
BabelServer/Database/: Database.cpp  Database.hpp  DatabaseError.hpp  User.hpp  sqlite_orm.h
BabelServer/Listener/: AsioListener.cpp  AsioListener.hpp  Listener.hpp  Listener.tpp  ServerListener.tpp
BabelServer/RequestManager/: RequestManager.cpp  RequestManager.hpp
BabelServer/RequestManager/CallManager/: CallManager.cpp  CallManager.hpp
BabelServer/RequestManager/FriendManager/: FriendManager.cpp  FriendManager.hpp
BabelServer/RequestManager/MessageManager/: MessageManager.cpp  MessageManager.hpp
BabelServer/RequestManager/UserManager/: UserManager.cpp  UserManager.hpp
BabelServer/Server/: Server.cpp  Server.hpp  ServerError.hpp
BabelServer/ServerSocket/: ServerSocket.cpp  ServerSocket.hpp
BabelServer/Socket/: Socket.cpp  Socket.hpp
BabelServer/Sockets/AsioSocket/: AsioClientSocket.cpp  AsioClientSocket.hpp  AsioClientsList.hpp
BabelServer/Sockets/Listener/: ClientsList.hpp  Listener.hpp
BabelServer/Sockets/Listener/AsioListener/: AsioListener.cpp  AsioListener.hpp
Bonus/GoBabel/: Makefile  README.md
Bonus/GoBabel/Client/: Core.go  main.go
Bonus/GoBabel/Client/Bridge/: Communicate.go
Bonus/GoBabel/Client/Client/: Core.go
Bonus/GoBabel/Client/ClientCore/: Core.go
Bonus/GoBabel/Save/: conference_test.go  user_test.go
Bonus/GoBabel/Server/: main.go
Bonus/GoBabel/ent/: client.go  mutation.go  runtime.go  user.go  user_create.go  user_delete.go  user_query.go  user_update.go
Bonus/GoBabel/tests/: Database_test.go  DbManagement.go  conference_test.go  user_test.go
Doc/: Protocol.md  RemoveSystemRequirements.sh  conanfile.txt
again_qt_test/Babel_qt/: CMakeLists.txt.user.2a25d92  contactlist.cpp  contactlist.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
again_qt_test/build-Babel_qt-Desktop_Qt_5_14_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  Babel_qt  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
again_qt_test/build-Babel_qt-Desktop_Qt_5_14_2_GCC_64bit-Debug/Babel_qt_autogen/: moc_predefs.h
client/: CMakeLists.txt  main.cpp  test.cpp
client/include/: Core.hpp  debug.hpp
client/src/: test.cpp
client/src/feature1/: feature1.cpp
client/src/feature2/: feature.cpp  feature2.cpp
common/: debug.hpp
doc/: Protocol.md
server/: CMakeLists.txt  main.cpp
server/include/: debug.hpp
server/src/feature1/: feature1.cpp
server/src/feature2/: feature.cpp  feature2.cpp
tests/criterion_unit_tests/include/: tests_run.hpp
tests/server/: Chat_Client.cpp  Chat_Message.hpp  Chat_Server.cpp
(+117 files in other folders)
